--- a/privately/app/src/main/res/layout/activity_hao_you.xml
+++ b/privately/app/src/main/res/layout/activity_hao_you.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".business.me.LiuYanBanActivity">
+    tools:context=".business.message.HaoYouActivity">
 
     <include layout="@layout/comm_title_bar" />
-    <include layout="@layout/search_layout" />
 
 
     <in.srain.cube.views.ptr.PtrClassicFrameLayout xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
@@ -18,17 +17,10 @@
         android:layout_weight="1"
         android:background="@color/main_bg">
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_join_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            tools:listitem="@layout/item_huixin_layout">
-
-        </androidx.recyclerview.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     </in.srain.cube.views.ptr.PtrClassicFrameLayout>
-
-
 </androidx.appcompat.widget.LinearLayoutCompat>
