--- a/privately/app/src/main/res/layout/activity_company_profiles.xml
+++ b/privately/app/src/main/res/layout/activity_company_profiles.xml
@@ -270,6 +270,8 @@
                         android:textSize="@dimen/text_one_five" />
 
                     <EditText
+                        android:inputType="number"
+                        android:maxLength="11"
                         android:id="@+id/et_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
