--- a/privately/app/src/main/res/layout/item_haoyou_layout.xml
+++ b/privately/app/src/main/res/layout/item_haoyou_layout.xml
@@ -12,6 +12,8 @@
 
 
     <RelativeLayout
+        android:id="@+id/SwipeMenuLayout"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -59,7 +61,7 @@
 
     <Button
         android:id="@+id/btnDelete"
-        android:layout_width="60dp"
+        android:layout_width="80dp"
         android:layout_height="match_parent"
         android:background="#FF5C33"
         android:text="删除"
