--- a/privately/app/src/main/res/layout/activity_latest_news.xml
+++ b/privately/app/src/main/res/layout/activity_latest_news.xml
@@ -20,6 +20,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_product_list"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:overScrollMode="never"
