--- a/privately/app/src/main/res/layout/activity_splash.xml
+++ b/privately/app/src/main/res/layout/activity_splash.xml
@@ -4,5 +4,24 @@
     android:layout_height="match_parent"
     android:background="@color/dark_green">
 
+    <com.zsoe.businesssharing.commonview.CustomVideoView
+        android:id="@+id/custom_video"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+    <Button
+        android:layout_centerHorizontal="true"
+        android:id="@+id/btn_login"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/adaptive_50dp"
+        android:layout_alignParentBottom="true"
+        android:paddingLeft="@dimen/adaptive_40dp"
+        android:paddingRight="@dimen/adaptive_40dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/btn_in_storke"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="15dp" />
 
 </RelativeLayout>
