--- a/privately/app/src/main/res/layout/em_context_menu_for_image.xml
+++ b/privately/app/src/main/res/layout/em_context_menu_for_image.xml
@@ -52,6 +52,7 @@
         android:onClick="forward"
         android:padding="10dp"
         android:text="@string/forward"
+        android:visibility="gone"
         android:textColor="@android:color/black"
         android:textSize="20sp" />
 
