--- a/privately/app/src/main/res/layout/activity_event_details.xml
+++ b/privately/app/src/main/res/layout/activity_event_details.xml
@@ -61,6 +61,7 @@
                     fresco:placeholderImageScaleType="fitCenter" />
 
                 <TextView
+                    android:id="@+id/title1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -80,6 +81,7 @@
 
 
                 <TextView
+                    android:id="@+id/title2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -98,6 +100,7 @@
                     tools:text="2019-07-07  16:00" />
 
                 <TextView
+                    android:id="@+id/title3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -119,6 +122,8 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
+                android:id="@+id/title4"
+
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
@@ -150,6 +155,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:id="@+id/title5"
+
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:padding="10dp">
