--- a/privately/app/src/main/res/layout/item_chanpin_guanli_list_layout.xml
+++ b/privately/app/src/main/res/layout/item_chanpin_guanli_list_layout.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/simple_item_background_selector"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="@dimen/adaptive_5dp">
 
     <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
         android:id="@+id/product_image"
@@ -19,7 +20,8 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/ll_ding"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/product_image"
@@ -42,31 +44,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:textColor="@color/text_b6"
             android:textSize="@dimen/text_one_three"
             tools:text="7月4日 16:00 朝阳区" />
 
+
+        <TextView
+            android:id="@+id/tv_p_c"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_ding"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="right"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/btn_daliang_storke"
+            android:paddingLeft="10dp"
+            android:paddingTop="3dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="3dp"
+            android:textColor="@color/AC9472"
+            android:textSize="@dimen/text_one_two"
+            tools:text="1268人看过" />
+
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_p_c"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/product_image"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/btn_daliang_storke"
-        android:paddingLeft="10dp"
-        android:paddingTop="3dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="3dp"
-        android:textColor="@color/AC9472"
-        android:textSize="@dimen/text_one_two"
-        tools:text="1268人看过" />
-
 
     <View
         style="@style/line_style"
-        android:layout_below="@+id/product_image" />
+        android:layout_below="@+id/product_image"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
