--- a/privately/app/src/main/res/layout/activity_splash.xml
+++ b/privately/app/src/main/res/layout/activity_splash.xml
@@ -20,7 +20,7 @@
         android:paddingRight="@dimen/adaptive_40dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/btn_in_storke"
-        android:text="@string/app_name"
+        android:text="点击进入"
         android:textColor="@color/white"
         android:textSize="15dp" />
 
