--- a/privately/app/src/main/res/layout/activity_register.xml
+++ b/privately/app/src/main/res/layout/activity_register.xml
@@ -167,6 +167,76 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+        <RelativeLayout
+            android:id="@+id/top_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/adaptive_20dp"
+            android:orientation="horizontal">
+
+            <View
+                style="@style/line_style"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/adaptive_70dp"
+                android:layout_marginRight="@dimen/adaptive_20dp"
+                android:layout_toLeftOf="@+id/textView" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="OR"
+                android:textColor="@color/text_3"
+                android:textSize="@dimen/text_one_eight" />
+
+
+            <View
+                style="@style/line_style"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/adaptive_20dp"
+                android:layout_marginRight="@dimen/adaptive_70dp"
+                android:layout_toRightOf="@+id/textView" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/top_layout"
+            android:layout_marginTop="@dimen/adaptive_10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/login_qq"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/adaptive_15dp"
+                android:src="@mipmap/login_qq" />
+
+            <ImageView
+                android:id="@+id/login_weixin"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+
+                android:padding="@dimen/adaptive_15dp"
+
+                android:src="@mipmap/login_weixin" />
+
+            <ImageView
+                android:id="@+id/login_weibo"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/adaptive_15dp"
+
+                android:src="@mipmap/login_weibo" />
+
+        </LinearLayout>
+
         <LinearLayout
             android:id="@+id/service"
             android:layout_width="match_parent"
@@ -179,25 +249,41 @@
 
             <CheckBox
                 android:id="@+id/checkbox"
-                android:checked="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:checked="true" />
 
             <TextView
-                android:textColor="@color/text_9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="我已阅读并接受"
-                android:textSize="14dp" />
+                android:textColor="@color/text_9"
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/tv_xieyi"
-                android:padding="@dimen/adaptive_3dp"
-                android:textColor="@color/main_c"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="@dimen/adaptive_3dp"
                 android:text="《用户服务协议》"
-                android:textSize="14dp" />
+                android:textColor="@color/main_c"
+                android:textSize="13dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13dp"
+                android:text="和" />
+
+            <TextView
+                android:id="@+id/tv_yinsi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/adaptive_3dp"
+                android:text="《隐私政策》"
+                android:textColor="@color/main_c"
+                android:textSize="13dp" />
+
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
