--- a/privately/app/src/main/res/layout/fragment_chapter_introduction.xml
+++ b/privately/app/src/main/res/layout/fragment_chapter_introduction.xml
@@ -90,7 +90,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="活动成果"
+                        android:text="分会介绍"
                         android:textColor="@color/text_3"
                         android:textSize="@dimen/text_one_six" />
 
