--- a/privately/app/src/main/res/layout/activity_set_up.xml
+++ b/privately/app/src/main/res/layout/activity_set_up.xml
@@ -97,6 +97,29 @@
 
     </RelativeLayout>
 
+    <View style="@style/line_style" />
+
+    <RelativeLayout
+
+        android:id="@+id/rl_shuoming"
+        style="@style/me_layout_style"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            style="@style/me_text_style"
+            android:text="用户协议与隐私政策" />
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/right_arrow" />
+
+    </RelativeLayout>
+
     <Button
 
         android:id="@+id/btn_login"
