--- a/privately/app/src/main/res/layout/fragment_message.xml
+++ b/privately/app/src/main/res/layout/fragment_message.xml
@@ -143,6 +143,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/the_one_layout"
             android:orientation="vertical"
             android:layout_marginTop="40dp"
