--- a/privately/app/src/main/res/layout/fragment_architectural_culture.xml
+++ b/privately/app/src/main/res/layout/fragment_architectural_culture.xml
@@ -28,22 +28,11 @@
                 </com.zsoe.businesssharing.commonview.banner.BannerView>
 
 
-                <androidx.appcompat.widget.LinearLayoutCompat
+                <WebView
+                    android:id="@+id/webView1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:background="@color/white"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:layout_height="match_parent"/>
 
-
-                    <TextView
-                        android:id="@+id/tv_content"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp" />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
 
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
